tests/expected/hidden_columns.err
Parse error near line 30: no such column: secret
  SELECT secret FROM data;
         ^--- error here